Templat design finished

--- a/candidate_template/bookmarked_jobs.html
+++ b/candidate_template/bookmarked_jobs.html
@@ -29,6 +29,15 @@
         <!-- Main Content Area -->
         <div class="ml-[18%] w-[82%] p-6 bg-gray-lighter">
             <div class="dashboard-widg-bar mb-5">
+              <div class="section mb-3">
+                <section class="relative bg-gray-500 overflow-hidden">
+                    <div class="max-w-7xl mx-auto py-14 px-6 lg:px-8">
+                        <div class="flex justify-center"> <!-- Added flex container to center the text -->
+                            <h1 class="text-10xl tracking-tight text-white text-center sm:text-4xl">Bookmarked Jobs</h1>
+                        </div>
+                    </div>
+                </section>
+            </div>
                 <div class="row">
                   <div class="col-xl-12 col-lg-12 col-md-12">
                     <div class="mb-4 rounded overflow-hidden">
@@ -38,8 +47,7 @@
                             <tr>
                               <th scope="col" class="px-4 py-2 text-left">Job Title</th>
                               <th scope="col" class="px-4 py-2 text-left">Vacancies</th>
-                              <th scope="col" class="px-4 py-2 text-left">Applied Date</th>
-                              <th scope="col" class="px-4 py-2 text-left">Application Status</th>
+                              <th scope="col" class="px-4 py-2 text-left">Bookmarked Date</th>
                               <th scope="col" class="px-4 py-2 text-left">Action</th>
                             </tr>
                           </thead>
@@ -51,7 +59,6 @@
                               </td>
                               <td class="px-4 py-2">5</td>
                               <td class="px-4 py-2">2024-11-01</td>
-                              <td class="px-4 py-2 text-green-600">Approved</td>
                               <td class="px-4 py-2">
                                 <a href="#" class="text-blue-500 hover:underline"><i class="fas fa-eye mr-1"></i></a>
                                 <a href="#" class="text-red-500 hover:underline ml-3"><i class="fas fa-trash-alt mr-1"></i></a>
@@ -64,7 +71,6 @@
                               </td>
                               <td class="px-4 py-2">3</td>
                               <td class="px-4 py-2">2024-10-28</td>
-                              <td class="px-4 py-2 text-yellow-600">Pending</td>
                               <td class="px-4 py-2">
                                 <a href="#" class="text-blue-500 hover:underline"><i class="fas fa-eye mr-1"></i></a>
                                 <a href="#" class="text-red-500 hover:underline ml-3"><i class="fas fa-trash-alt mr-1"></i></a>
@@ -77,7 +83,6 @@
                               </td>
                               <td class="px-4 py-2">2</td>
                               <td class="px-4 py-2">2024-10-15</td>
-                              <td class="px-4 py-2 text-red-600">Rejected</td>
                               <td class="px-4 py-2">
                                 <a href="#" class="text-blue-500 hover:underline"><i class="fas fa-eye mr-1"></i></a>
                                 <a href="#" class="text-red-500 hover:underline ml-3"><i class="fas fa-trash-alt mr-1"></i></a>
@@ -90,7 +95,6 @@
                               </td>
                               <td class="px-4 py-2">4</td>
                               <td class="px-4 py-2">2024-11-10</td>
-                              <td class="px-4 py-2 text-green-600">Approved</td>
                               <td class="px-4 py-2">
                                 <a href="#" class="text-blue-500 hover:underline"><i class="fas fa-eye mr-1"></i></a>
                                 <a href="#" class="text-red-500 hover:underline ml-3"><i class="fas fa-trash-alt mr-1"></i></a>
@@ -103,7 +107,6 @@
                               </td>
                               <td class="px-4 py-2">1</td>
                               <td class="px-4 py-2">2024-11-05</td>
-                              <td class="px-4 py-2 text-yellow-600">Pending</td>
                               <td class="px-4 py-2">
                                 <a href="#" class="text-blue-500 hover:underline"><i class="fas fa-eye mr-1"></i></a>
                                 <a href="#" class="text-red-500 hover:underline ml-3"><i class="fas fa-trash-alt mr-1"></i></a>
@@ -125,16 +128,22 @@
 
 </body>
 <script>
-    // JavaScript to handle collapsible profile section
-    const profileToggle = document.getElementById('profileToggle');
-    const profileItems = document.getElementById('profileItems');
-    const profileIcon = document.getElementById('profileIcon');
+      // JavaScript to handle collapsible profile section
+      document.addEventListener('click', (event) => {
+    const profileToggle = event.target.closest('#profileToggle');
+    if (profileToggle) {
+        const profileItems = document.getElementById('profileItems');
+        const profileIcon = document.getElementById('profileIcon');
 
-    profileToggle.addEventListener('click', () => {
-        profileItems.classList.toggle('hidden');
-        profileIcon.classList.toggle('fa-chevron-down');
-        profileIcon.classList.toggle('fa-chevron-up');
-    });
+        if (profileItems && profileIcon) {
+            profileItems.classList.toggle('hidden');
+            profileIcon.classList.toggle('fa-chevron-down');
+            profileIcon.classList.toggle('fa-chevron-up');
+        } else {
+            console.error('Sidebar elements not found.');
+        }
+    }
+});
 </script>
 <script>
     fetch('include/navbar.html')
