--- a/candidate_template/faqs.html
+++ b/candidate_template/faqs.html
@@ -30,10 +30,10 @@
       <div>
         <div class="accordion-item mb-4">
           <button class="accordion-header w-full text-left px-4 py-2 text-xl font-semibold bg-gray-100 hover:bg-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-            What is Jobnova?
+            What is GlobalLink
           </button>
           <div class="accordion-content hidden p-4 bg-gray-50 rounded-b-lg">
-            <p>Jobnova is a platform that connects job seekers with employers, offering a wide range of job opportunities across various industries.</p>
+            <p>GlobalLink is a platform that connects job seekers with employers, offering a wide range of job opportunities across various industries.</p>
           </div>
         </div>
   
@@ -57,10 +57,10 @@
   
         <div class="accordion-item mb-4">
           <button class="accordion-header w-full text-left px-4 py-2 text-xl font-semibold bg-gray-100 hover:bg-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-            Is Jobnova free to use?
+            Is GlobalLink free to use?
           </button>
           <div class="accordion-content hidden p-4 bg-gray-50 rounded-b-lg">
-            <p>Yes, Jobnova is completely free for job seekers to use. Employers may have subscription plans for posting job listings.</p>
+            <p>Yes, GlobalLink is completely free for job seekers to use. Employers may have subscription plans for posting job listings.</p>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
             Can I apply for multiple jobs?
           </button>
           <div class="accordion-content hidden p-4 bg-gray-50 rounded-b-lg">
-            <p>Yes, you can apply for as many jobs as you like on Jobnova. Each application will be handled separately by employers.</p>
+            <p>Yes, you can apply for as many jobs as you like on GlobalLink. Each application will be handled separately by employers.</p>
           </div>
         </div>
   
@@ -90,7 +90,7 @@
             How do I get job recommendations?
           </button>
           <div class="accordion-content hidden p-4 bg-gray-50 rounded-b-lg">
-            <p>Once you complete your profile and job preferences, Jobnova will suggest jobs based on your qualifications and interests.</p>
+            <p>Once you complete your profile and job preferences, GlobalLink will suggest jobs based on your qualifications and interests.</p>
           </div>
         </div>
   
