--- a/candidate_template/contact.html
+++ b/candidate_template/contact.html
@@ -72,7 +72,7 @@
           <i class="fas fa-phone-alt text-4xl text-blue-500"></i>
         </div>
         <h5 class="font-semibold text-xl text-gray-800 mb-3">Phone</h5>
-        <p class="text-gray-800 font-semibold">+152 534-468-854</p>
+            <p class="text-gray-800 font-semibold">+101 984 754</p>
       </div>
       
       <!-- Card 2: Email -->
@@ -81,7 +81,7 @@
           <i class="fas fa-envelope text-4xl text-blue-500"></i>
         </div>
         <h5 class="font-semibold text-xl text-gray-800 mb-3">Email</h5>
-        <p class="text-gray-800 font-semibold">contact@example.com</p>
+        <p class="text-gray-800 font-semibold">GlobalLink@outlook.com</p>
       </div>
   
       <!-- Card 3: Location -->
@@ -90,7 +90,8 @@
           <i class="fas fa-map-marker-alt text-4xl text-blue-500"></i>
         </div>
         <h5 class="font-semibold text-xl text-gray-800 mb-3">Location</h5>
-        <p class="text-gray-800 font-semibold">C/54 Northwest Freeway, Suite 558, Houston, USA 485</p>
+        <p class="text-gray-800 font-semibold">
+          123, Denver, USA</p>
       </div>
     </div>
   </section>
