--- a/recruiter_template/candidate_list.html
+++ b/recruiter_template/candidate_list.html
@@ -37,44 +37,11 @@ tr:nth-child(even) {
 </style>
 <body>
 
+    <div id="admin_navbar"></div>
  
     <div class="flex">
         <!-- Sidebar -->
-        <aside class="fixed left-0  h-full bg-gray-800 p-4 shadow-xl" style="width: 20%;">
-            <h2 class="text-white text-xl font-semibold mb-4">Recruiter Dashboard</h2>
-            <ul class="space-y-2">
-                <li>
-                    <a href="#" class="flex items-center p-2 text-gray-300 hover:bg-indigo-600 rounded-md">
-                        <i class="fas fa-tachometer-alt mr-2"></i>
-                        Dashboard
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="flex items-center p-2 text-gray-300 hover:bg-indigo-600 rounded-md">
-                        <i class="fas fa-briefcase mr-2"></i>
-                        Jobs Posted
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="flex items-center p-2 text-gray-300 hover:bg-indigo-600 rounded-md">
-                        <i class="fas fa-users mr-2"></i>
-                        Candidates
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="flex items-center p-2 text-gray-300 hover:bg-indigo-600 rounded-md">
-                        <i class="fas fa-paper-plane mr-2"></i>
-                        Applications
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="flex items-center p-2 text-gray-300 hover:bg-indigo-600 rounded-md">
-                        <i class="fas fa-folder-open mr-2"></i>
-                        Job Sectors
-                    </a>
-                </li>
-            </ul>
-        </aside>
+        <div id="admin_sidebar"></div>
     
         <!-- Main Content Area -->
         <div class="ml-[20%] w-[80%] p-6">
@@ -143,5 +110,27 @@ tr:nth-child(even) {
     </div>
     
 </body>
-
+<script>
+    fetch('include/admin_navbar.html')
+      .then(response => {
+          if (!response.ok) {
+              throw new Error('Navbar file not found or inaccessible.');
+          }
+          return response.text();
+      })
+      .then(data => {
+          document.getElementById('admin_navbar').innerHTML = data;
+      })
+      .catch(error => console.error('Error loading navbar:', error));
+    fetch('include/admin_sidebar.html')
+      .then(response => {
+          if (!response.ok) {
+              throw new Error('Navbar file not found or inaccessible.');
+          }
+          return response.text();
+      })
+      .then(data => {
+          document.getElementById('admin_sidebar').innerHTML = data;
+      })
+</script>
 </html>
